--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -133,9 +133,7 @@
 
 .processButton{
   font-size: 19px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-
+  height: 80px;
   color: black;
   margin-left: 2px;
   background-color: #ffffff;
