--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -47,7 +47,7 @@
   font-weight: bold;
   text-shadow: 6px 6px 5px rgba(0, 0, 0, 0.3); /* Add text shadow for a shadow effect */
   letter-spacing: 2px; /* Adjust letter spacing as needed */
-  margin-top: 150px;
+  margin-top: -350px;
   margin-bottom: 100px;
   color: white;
 
@@ -68,8 +68,8 @@
   font-weight: bold;
   text-shadow: 6px 6px 5px rgba(0, 0, 0, 0.3); /* Add text shadow for a shadow effect */
   letter-spacing: 2px; /* Adjust letter spacing as needed */
-  margin-top: 150px;
-  margin-bottom: 100px;
+  margin-top: 50px;
+  margin-bottom: 00px;
   color: white;
 }
 @media (max-width: 767px) {
@@ -79,6 +79,52 @@
 
   }
 }
+
+.arriving-text6 {
+  font-size: 22px; /* Adjust the font size as needed */
+  text-transform: uppercase; /* Convert text to uppercase */
+  font-weight: bold;
+  text-shadow: 6px 6px 5px rgba(0, 0, 0, 0.3); /* Add text shadow for a shadow effect */
+  letter-spacing: 2px; /* Adjust letter spacing as needed */
+  margin-top: 150px;
+  margin-bottom: 00px;
+  color: white;
+}
+@media (max-width: 767px) {
+  .arriving-text6 {
+    margin-right: 0px;
+    margin-left: -5px;
+    margin-top: 250px;
+
+  }
+}
+
+@media (max-width: 767px) {
+  .arriving-text5 {
+    margin-right: 0px;
+    margin-left: -5px;
+    margin-bottom: -250px;
+
+  }
+}
+.arriving-text7 {
+  font-size: 22px; /* Adjust the font size as needed */
+  text-transform: uppercase; /* Convert text to uppercase */
+  font-weight: bold;
+  text-shadow: 6px 6px 5px rgba(0, 0, 0, 0.3); /* Add text shadow for a shadow effect */
+  letter-spacing: 2px; /* Adjust letter spacing as needed */
+  margin-top: 0px;
+  margin-bottom: 100px;
+  color: white;
+}
+@media (max-width: 767px) {
+  .arriving-text7 {
+    margin-right: 0px;
+    margin-left: -5px;
+
+  }
+}
+
 
 
 .arriving-text2 {
@@ -114,7 +160,7 @@
   transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Combine transitions into a single property */
 
   margin: 20px auto; /* Center the button horizontally */
-  margin-top: 500px;
+  margin-top: 100px;
   cursor: pointer;
 }
 
