--- a/frontend/my-react-app/src/Timeline.css
+++ b/frontend/my-react-app/src/Timeline.css
@@ -36,6 +36,57 @@
   }
 }
 
+.dark-button {
+  background-color: lightcyan; /* Green color */
+  color: black;
+  border-radius: 15px;
+  font-size: 26px; /* Increase the font size to make it bigger */
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  border-left: 0px solid black;
+  border-top: 0px solid black;
+  padding: 5px 10px; /* Increase the padding to make it bigger */
+  display: block;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Combine transitions into a single property */
+
+  margin: 20px auto; /* Center the button horizontally */
+  margin-top: 50px;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.dark-button2 {
+  background-color: lightcyan; /* Green color */
+  color: black;
+  border-radius: 15px;
+  font-size: 26px; /* Increase the font size to make it bigger */
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  border-left: 0px solid black;
+  border-top: 0px solid black;
+  padding: 5px 10px; /* Increase the padding to make it bigger */
+  display: block;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Combine transitions into a single property */
+
+  margin: 20px auto; /* Center the button horizontally */
+  margin-top: 50px;
+  cursor: pointer;
+}
+
+
+.dark-button:hover {
+  background-color: #556B2F; /* Green color */
+  color: white;
+
+  border-radius: 15px;
+  border-right: 2px solid black;
+  border-bottom: 2px solid black;
+  box-shadow: 10px 10px 0 rgba(255, 255, 255, 0.2); /* Light gray shadow */
+  display: block;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Combine transitions into a single property */
+  cursor: pointer;
+}
+
 .timelinePosition {
   margin-top: 10px;
   margin-bottom: 100px;
@@ -62,6 +113,7 @@ div iframe {
 .button-container {
   margin-top: 100px;
   margin-bottom: 0px;
+  display: flex;
 }
 
 .button-container2 {
