--- a/frontend/my-react-app/src/PrototypeHeader.css
+++ b/frontend/my-react-app/src/PrototypeHeader.css
@@ -286,7 +286,7 @@
   display: flex;
   padding: 5px;
 
-  border: .8px solid #556B2F; /* Green color */
+  border: 1.6px solid #556B2F; /* Green color */
   border-radius: 8px; /* Adjust as needed for rounded corners */
 }
 
@@ -295,7 +295,7 @@
   display: flex;
   padding: 5px;
 
-  border: .8px solid #556B2F; /* Green color */
+  border: 1.6px solid #556B2F; /* Green color */
   border-radius: 8px; /* Adjust as needed for rounded corners */
 
 }
