styling for front page on mobile

--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -94,7 +94,8 @@
   .arriving-text6 {
     margin-right: 0px;
     margin-left: -5px;
-    margin-top: 250px;
+    margin-top: 150px;
+    margin-bottom: 50px;
 
   }
 }
