styling for front page on mobile

--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -100,6 +100,16 @@
   }
 }
 
+.timeline-position{
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+}
+
+.timeline-position:hover{
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 20px 20px 0 rgba(255, 255, 255, 0.2); /* Light gray shadow */
+}
+
+
 @media (max-width: 767px) {
   .arriving-text5 {
     margin-right: 0px;
@@ -230,7 +240,7 @@
 
 .iframe-container2:hover{
   transition: box-shadow 0.3s ease; /* Smooth transition on hover */
-  box-shadow: 25px 25px 0 rgba(255, 255, 255, 0.2); /* Light gray shadow */
+  box-shadow: 20px 20px 0 rgba(255, 255, 255, 0.2); /* Light gray shadow */
 
 }
 
