--- a/frontend/my-react-app/src/styles.module.css
+++ b/frontend/my-react-app/src/styles.module.css
@@ -37,6 +37,7 @@
 .img__container {
   overflow: hidden;
   position: absolute;
+  opacity: .5;
   top: 0;
   width: 100%;
   height: 100%;
@@ -99,7 +100,7 @@
 @media (max-width: 767px) {
   .overlayContainer {
     margin-top: -400px;
-    
+
 
   }
 }
