--- a/frontend/my-react-app/src/About.css
+++ b/frontend/my-react-app/src/About.css
@@ -1,21 +1,31 @@
 /* About.css */
 .center-div {
-  text-align: center;
-  margin-top: 100px;
+  text-align: left;
+  margin-top: 80px;
   margin-bottom: 200px;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  background-color: #f5f5f5; /* Off-white color for the container */
 
 }
 
 
-.aboutJinsei{
-
-  color: white;
+.aboutJinsei {
+  color: #333; /* Off-black color #333*/
   margin-bottom: 40px;
   margin-right: 20px;
   margin-left: 20px;
+  text-align: left !important; /* Align text to the left */
+  display: block;
+}
+
+.aboutJinsei2 {
+  color: #333; /* Off-black color #333*/
+  margin-bottom: 100px;
+  margin-right: 20px;
+  margin-left: 20px;
+  text-align: left !important; /* Align text to the left */
+  display: block;
 }
 
 
