--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -21,17 +21,23 @@
   box-shadow: 10px 10px 0 #003366;
 }
 
+.stateSummaryWrap{
+  display: flex;
+}
 
 .balance-sheet2 {
   background-color: #f0f0f0;
   border: 1px solid #ccc;
   padding: 20px;
   width: 100%;
+  position: fixed;
+
   max-width: 800px;
-  max-height: 300px;
+  width: 350px;
+  max-height: 450px;
   overflow: auto;
-  margin-top: 100px;
-  margin-left: 250px;
+  margin-top: 50px;
+  margin-left: 0px;
   border-radius: 10px;
   transition: box-shadow 0.3s ease; /* Smooth transition on hover */
 
@@ -41,6 +47,48 @@
   transition: box-shadow 0.3s ease; /* Smooth transition on hover */
   box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
+
+.balance-sheet3 {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 100%;
+  max-width: 800px;
+  max-height: 450px;
+  overflow: auto;
+  margin-top: 50px;
+  margin-left: 5px;
+  border-radius: 10px;
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+}
+
+.balance-sheet3:hover {
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+.balance-sheet4 {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 100%;
+
+  max-width: 800px;
+  max-height: 500px;
+  overflow: auto;
+  margin-top: 50px;
+  margin-left: 400px;
+  border-radius: 10px;
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+}
+
+.balance-sheet4:hover {
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
 
 
 /* CSS for the element title */
