adding status iconography in state summary

--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -89,6 +89,15 @@
   box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
+.statusImage{
+  width: 100px;
+  height: 100px;
+}
+
+.element-status-wrap{
+  display: flex;
+}
+
 
 
 /* CSS for the element title */
