--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -68,6 +68,12 @@
   box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
+.elementTitle21{
+  color: black;
+  font-size: 20px;
+
+}
+
 .balance-sheet4 {
   background-color: #f0f0f0;
   border: 1px solid #ccc;
