--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -151,11 +151,22 @@
 }
 
 .elementTitle9{
-  font-size: 20px;
+  font-size: 22px;
+  font-style: italic;
   color: black;
   margin-top: 25px;
   margin-bottom: 10px;
-  margin-left: 100px;
+  margin-left: 00px;
+}
+
+.elementTitle21{
+  font-size: 24px;
+  font-weight: 500;
+  font-style: italic;
+  color: black;
+  margin-top: 25px;
+  margin-bottom: 10px;
+  margin-left: 00px;
 }
 
 .elementTitle18{
