--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -7,7 +7,7 @@
   padding: 5px;
   display: inline-block;
   margin-left: -40px;
-  max-width: 1600px;
+  width: 1600px;
   max-height: 400px;
   margin-bottom: -100px;
   border-radius: 10px !important;
@@ -34,7 +34,7 @@
   padding: 5px;
   display: inline-block;
   margin-left: 0px;
-  max-width: 1600px;
+  width: 1400px;
   max-height: 400px;
   margin-bottom: 00px;
   border-radius: 10px !important;
@@ -465,7 +465,7 @@
 
 .xlsx-table6 td {
   background-color: #ffffff;
-
+  width: 400px;
 }
 
 .xlsx-table6 td[contentEditable="true"]:focus {
