--- a/frontend/my-react-app/src/XLSXSheetRenderer.css
+++ b/frontend/my-react-app/src/XLSXSheetRenderer.css
@@ -7,7 +7,7 @@
   padding: 5px;
   display: inline-block;
   margin-left: -40px;
-  width: 1600px;
+  max-width: 1500px;
   max-height: 400px;
   margin-bottom: -100px;
   border-radius: 10px !important;
