side menu styles

--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -173,6 +173,28 @@
   margin-left: 00px;
 }
 
+.elementTitle25{
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: 25px;
+
+  font-style: italic;
+  color: black;
+  margin-bottom: 30px;
+  margin-left: 00px;
+}
+
+.elementTitle26{
+  font-size: 24px;
+  font-weight: 500;
+  margin-top: 10px;
+
+  font-style: italic;
+  color: black;
+  margin-bottom: 30px;
+  margin-left: 00px;
+}
+
 .elementTitle18{
   margin-left: 1500px;
   font-size: 22px;
