--- a/frontend/my-react-app/src/StructureInstanceTable.css
+++ b/frontend/my-react-app/src/StructureInstanceTable.css
@@ -24,6 +24,59 @@
 .stateSummaryWrap{
   display: flex;
 }
+.balance-sheet7 {
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  padding: 20px;
+  width: 100%;
+  position: fixed;
+
+  width: 1250px;
+  max-height: 350px;
+  overflow: auto;
+  margin-top: 50px;
+  margin-left: -15px;
+  border-radius: 10px;
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+
+}
+
+
+.Modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  border: 1px solid #ccc;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  max-width: 400px;
+  width: 100%;
+}
+
+.ModalHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.ModalCloseButton {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 16px;
+  color: #333;
+}
+
+.ModalCloseButton:hover {
+  color: red;
+}
+.balance-sheet7:hover {
+  transition: box-shadow 0.3s ease; /* Smooth transition on hover */
+  box-shadow: 10px 10px 0 rgba(0, 0, 0, 0.2);
+}
 
 .balance-sheet2 {
   background-color: #f0f0f0;
