--- a/frontend/my-react-app/src/About.css
+++ b/frontend/my-react-app/src/About.css
@@ -14,7 +14,7 @@
   color: #333; /* Off-black color #333*/
   margin-bottom: 40px;
   margin-right: 20px;
-  margin-left: 20px;
+  margin-left: 40px;
   text-align: left !important; /* Align text to the left */
   display: block;
 }
@@ -23,7 +23,44 @@
   color: #333; /* Off-black color #333*/
   margin-bottom: 100px;
   margin-right: 20px;
-  margin-left: 20px;
+  margin-left: 40px;
+  text-align: left !important; /* Align text to the left */
+  display: block;
+}
+
+.tradeSecretTitle{
+  color: #333; /* Off-black color #333*/
+  margin-bottom: 10px;
+  margin-right: 20px;
+  margin-left: 40px;
+  text-align: left !important; /* Align text to the left */
+  display: block;
+}
+
+.tocTitle{
+  color: #333; /* Off-black color #333*/
+  margin-bottom: 20px;
+  margin-right: 20px;
+  margin-left: 40px;
+  text-align: left !important; /* Align text to the left */
+  display: block;
+}
+
+.tocItem{
+  color: #333; /* Off-black color #333*/
+  margin-bottom: 10px;
+  margin-right: 20px;
+  margin-left: 60px;
+  text-align: left !important; /* Align text to the left */
+  display: block;
+}
+
+.topicTitle{
+  color: #333; /* Off-black color #333*/
+  margin-bottom: 20px;
+  margin-right: 20px;
+  margin-left: 40px;
+  margin-top: 50px;
   text-align: left !important; /* Align text to the left */
   display: block;
 }
