--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -4,7 +4,9 @@
   margin-top: 50px;
   background-size: 30%; /* Adjust the percentage as needed for the desired zoom level */
   background-color: #001522;
+
   /* background: url('blue.png') repeat;
+
   background-position: right 50px top 60px; */
   /* background-image: url('./backgroundImageHomepage.png'); /* Corrected syntax with url() */
 }
@@ -50,6 +52,8 @@
   margin-top: -350px;
   margin-bottom: 100px;
   color: white;
+  transform: scale(0.9);
+      transform-origin: top;
 
   padding: 20px; /* Adjust padding as needed */
 }
