--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -416,3 +416,65 @@
   }
 
 }
+
+
+.prototype-buttonw {
+ background-color: lightcyan; /* Green color */
+ color: black;
+ border-radius: 15px;
+ font-size: 36px; /* Increase the font size to make it bigger */
+ border-right: 2px solid black;
+ border-bottom: 2px solid black;
+ border-left: 0px solid black;
+ border-top: 0px solid black;
+ padding: 20px 20px; /* Increase the padding to make it bigger */
+ display: block;
+ transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Combine transitions into a single property */
+ width: 60%;
+ margin: 20px auto; /* Center the button horizontally */
+ margin-top: 10px;
+ margin-bottom: 10px;
+ cursor: pointer;
+}
+
+.prototype-buttonw:hover {
+ background-color: #556B2F; /* Green color */
+ color: white;
+
+ border-radius: 15px;
+ font-size: 36px; /* Increase the font size to make it bigger */
+ border-right: 2px solid black;
+ border-bottom: 2px solid black;
+ box-shadow: 15px 15px 0 rgba(255, 255, 255, 0.2); /* Light gray shadow */
+ padding: 20px 20px; /* Increase the padding to make it bigger */
+ display: block;
+ width: 60%;
+ transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Combine transitions into a single property */
+ cursor: pointer;
+}
+
+@media (max-width: 768px) {
+  .prototype-buttonw:hover {
+    box-shadow: 10px 10px 0 rgba(255, 255, 255, 0.2); /* Light gray shadow */
+    display: block;
+    width: 80%;
+    padding: 15px 10px; /* Adjust padding for mobile */
+    font-size: 20px; /* Further decrease font size for mobile */
+    transition: background-color 0.3s ease, box-shadow 0.3s ease; /* Combine transitions into a single property */
+    cursor: pointer;
+  }
+}
+
+
+
+@media (max-width: 768px) {
+
+
+  .prototype-buttonw {
+    font-size: 20px; /* Further decrease font size for mobile */
+    padding: 15px 10px; /* Adjust padding for mobile */
+    box-shadow: 5px 5px 0 rgba(0, 0, 0, 0.2); /* Smaller shadow for mobile */
+    width: 80%;
+  }
+
+}
