--- a/frontend/my-react-app/src/Header.css
+++ b/frontend/my-react-app/src/Header.css
@@ -20,6 +20,12 @@
 
   }
 
+  @media (min-width: 1307px) {
+    .header {
+      width: 106.5%;
+    }
+  }
+
   .socials{
     height: 25px;
     margin-left: 5px;
@@ -59,11 +65,11 @@
     background-color: transparent; /* Set the background to be transparent */
     border-bottom: 1px black solid; /* Remove the border */
   }
-  @media (min-width: 1367px) {
+  /* @media (min-width: 1367px) {
     .button {
-      width: 103%;
+      width: 100%;
     }
-  }
+  } */
   .title {
     text-align: center;
     font-size: 20px;
