--- a/frontend/my-react-app/src/About.css
+++ b/frontend/my-react-app/src/About.css
@@ -2,7 +2,7 @@
 .center-div {
   text-align: left;
   margin-top: 80px;
-  margin-bottom: 400px;
+  margin-bottom: 100px;
   display: flex;
   flex-direction: column;
   background-color: #f5f5f5; /* Off-white color for the container */
@@ -37,9 +37,22 @@
   margin-bottom: 40px;
   margin-right: 20px;
   margin-left: 40px;
+  font-size: 18px;
   text-align: left !important; /* Align text to the left */
   display: block;
 }
+
+.aboutJinsei7 {
+  color: #333; /* Off-black color #333*/
+  margin-bottom: 40px;
+  margin-right: 20px;
+  margin-left: 40px;
+  margin-top: 30px;
+  font-size: 18px;
+  text-align: center !important; /* Align text to the left */
+  display: block;
+}
+
 
 .aboutJinsei2 {
   color: #333; /* Off-black color #333*/
