--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -3,7 +3,7 @@
   padding: 20px;
   margin-top: 50px;
   background-size: 30%; /* Adjust the percentage as needed for the desired zoom level */
-  background-color: #001522;
+  background-color: white;
 
   /* background: url('blue.png') repeat;
 
