--- a/frontend/my-react-app/src/About.css
+++ b/frontend/my-react-app/src/About.css
@@ -42,6 +42,16 @@
   display: block;
 }
 
+.aboutJinsei69{
+  color: #333; /* Off-black color #333*/
+  margin-bottom: 400px;
+  margin-right: 20px;
+  margin-left: 40px;
+  font-size: 18px;
+  text-align: left !important; /* Align text to the left */
+  display: block;
+}
+
 .aboutJinsei7 {
   color: #333; /* Off-black color #333*/
   margin-bottom: 40px;
