--- a/frontend/my-react-app/src/Homepage.css
+++ b/frontend/my-react-app/src/Homepage.css
@@ -4,7 +4,8 @@
   margin-top: 50px;
   background-size: 30%; /* Adjust the percentage as needed for the desired zoom level */
   background-color: white;
-  
+  margin-bottom: 300px;
+
   /* background: url('blue.png') repeat;
 
   background-position: right 50px top 60px; */
